--- a/.babelrc
+++ b/.babelrc
@@ -4,10 +4,8 @@
       "@babel/preset-env",
       {
         "modules": false,
-        "loose": true,
-        "useBuiltIns": "usage",
-        "corejs": 3
-      }
+      },
+      "@babel/typescript"
     ]
   ],
   "plugins": ["@babel/plugin-proposal-class-properties"]
