--- a/package.json
+++ b/package.json
@@ -1,61 +1,46 @@
 {
-  "name": "webpack-starter-kit",
+  "name": "image-finder",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --env.mode development --config ./webpack/config.js --public-url /js-hw-13-image-finder/ ",
-    "build": "webpack --env.mode production --config ./webpack/config.js",
+    "start": "webpack-dev-server --mode development --config ./webpack/config.js",
+    "build": "webpack --mode production --config ./webpack/config.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/luxplanjay/webpack-starter-kit.git"
+    "type": "git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Denys Kodak",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/luxplanjay/webpack-starter-kit/issues"
-  },
   "homepage": "https://deniskodak.github.io/goit-js-hw-13-image-finder/",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
-    "@pnotify/core": "^5.2.0",
-    "autoprefixer": "^9.8.6",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^4.3.0",
-    "file-loader": "^6.1.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "gh-pages": "^3.1.0",
-    "handlebars-loader": "^1.7.1",
-    "html-loader": "^1.3.1",
-    "html-webpack-plugin": "^4.5.0",
-    "img-loader": "^3.0.2",
-    "mini-css-extract-plugin": "^0.11.2",
-    "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "pnotify": "^5.2.0",
-    "postcss-loader": "^4.0.2",
-    "sass-loader": "^10.0.2",
-    "style-loader": "^1.2.1",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.1.4",
-    "webpackbar": "^4.0.0"
+    "@babel/core": "^7.22.5",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/basiclightbox": "^5.0.1",
+    "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.8.1",
+    "fslightbox": "^3.4.1",
+    "gh-pages": "^5.0.0",
+    "handlebars-loader": "^1.7.3",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.7.6",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.9.0"
   },
   "dependencies": {
     "basiclightbox": "^5.0.4",
-    "core-js": "^3.6.5",
-    "handlebars": "^4.7.6",
-    "lodash.debounce": "^4.0.8",
-    "material-design-icons": "^3.0.1",
-    "throttle-debounce": "^3.0.1"
+    "core-js": "^3.31.0",
+    "handlebars": "^4.7.7",
+    "throttle-debounce": "^5.0.0"
   }
 }
