--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,7 @@
 {
   "presets": [
     [
-      "@babel/preset-env",
-      {
-        "modules": false,
-      },
-      "@babel/typescript"
+      "@babel/preset-env"
     ]
   ],
   "plugins": ["@babel/plugin-proposal-class-properties"]
