--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --mode development --config ./webpack/config.js",
     "build": "webpack --mode production --config ./webpack/config.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "npm run predeploy && gh-pages -d dist"
   },
   "repository": {
     "type": "git"
@@ -15,16 +15,15 @@
   "keywords": [],
   "author": "Denys Kodak",
   "license": "MIT",
-  "homepage": "https://deniskodak.github.io/goit-js-hw-13-image-finder/",
+  "homepage": "https://deniskodak.github.io/js-image-finder/",
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.22.5",
-    "@babel/preset-typescript": "^7.22.5",
-    "@types/basiclightbox": "^5.0.1",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
     "fslightbox": "^3.4.1",
     "gh-pages": "^5.0.0",
     "handlebars-loader": "^1.7.3",
